# Unn-Thesis-2024-Semubot-SpeechSystem

./: README.md  Setup_guide.md  semubot_speech_node.py
ROS packages/custom_interfaces/: CMakeLists.txt  package.xml
ROS packages/semubot_llm/: package.xml  setup.cfg  setup.py
ROS packages/semubot_llm/semubot_llm/: llm_controller.py
ROS packages/semubot_speech_recognition/: package.xml  setup.cfg  setup.py
ROS packages/semubot_speech_recognition/semubot_speech_recognition/: semubot_speech_node.py  test.py
Testing Results/: Prompt Test data.xlsx
